--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf ./dist && webpack --config ./config/webpack.config.js --mode production",
+    "build": "rm -rf ./dist && webpack --config ./config/webpack.config.js --mode development",
     "start": "webpack-dev-server --config ./config/webpack.config.js --mode development --open"
   },
   "repository": {
@@ -22,6 +22,10 @@
   "devDependencies": {
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/node": "^12.12.5",
+    "@types/react-redux": "^7.1.5",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
@@ -35,6 +39,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
-    "redux-saga": "^1.1.1"
+    "redux-saga": "^1.1.1",
+    "typesafe-actions": "^5.1.0"
   }
 }
