--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "homepage": "https://github.com/HungNho17/ReduxSagas#readme",
   "devDependencies": {
+    "@types/canvasjs": "^1.9.5",
+    "@types/node": "^12.12.5",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
-    "@types/node": "^12.12.5",
     "@types/react-redux": "^7.1.5",
     "@types/redux": "^3.6.0",
     "@types/redux-saga": "^0.10.5",
@@ -40,6 +41,7 @@
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
+    "regl": "^1.3.13",
     "typesafe-actions": "^5.1.0"
   }
 }
